Convert tool-wrapper.* scripts to use commons-launcher and obsolete the digest.* scripts since they are scripts that merely invoke the tool-wrapper.* scripts. Also, the setclasspath.* and the cpappend.* scripts are no longer needed now that catalina.xml handles the classpath settings.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/container/catalina/trunk@301109 13f79535-47bb-0310-9956-ffa450edef68